--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dotenv": "^16.0.2",
     "ethers": "^5.7.0",
     "fs-extra": "^10.1.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solc": "^0.8.16"
   },
   "scripts": {
